<b>2009-01-07</b>

* Bug: Blank class, reason no longer assigned defaults when edited
* Bug: Autocompletion of airline in Detailed editor fixed

<b>2009-01-06</b>

* OpenFlights Delta released!
* OpenFlights blog and "Elite" donation/level system launched
* New, large, user-friendly settings screen, with Elite Gold options implemented
* Password-protected private profiles implemented
* Adjustments to button layout for Basic editor
* Bug: Fixes to Top 10 stats formatting (2484923)
* Bug: Trip filter works again
* Bug: Advanced airline search for Basic editor fixed
* Bug: Callsigns now work in advanced airline search
* Bug: Help button no longer displayed when not available