@@ -117,11 +117,11 @@
 
 	    <h4>Something went wrong when I imported from FlightMemory!</h4>
 
-	    <p>This most often happens with airlines, since FlightMemory and OpenFlights do not render all company names in the same way.  OpenFlights also uses current airline data, not historical, so eg. SN123 will be mapped to "Brussels Airlines", not "Sabena".  If you had <i>lots</i> of flights get wrongly assigned, please drop us a line and we'll try to sort it out, but for only a few flights, it's easiest to repair by hand.  Exporting to CSV, editing in Excel, and reimporting is also a viable option.</p>
+	    <p>This most often happens with airlines, since FlightMemory and OpenFlights do not render all company names in the same way.  OpenFlights also uses current airline data, not historical, so eg. SN123 will be mapped to "Brussels Airlines", not "Sabena".  To keep the old airline names exactly the way you had them on FlightMemory, check <b>Keep historical airline names?</b> when importing.</p>
 
 	    <p>The other common source of headaches is unofficial airports like heliports and landing strips, which do not have IATA/ICAO codes.  These have to be entered manually into OpenFlights using "Add new airport" <i>before</i> you can import.  Note that the matching is done based on the <i>first word of the airport name</i>, so make sure the one in your data matches the one you enter exactly.</p>
 
-	    <p>If anything else goes wrong during importing, though, it's a bug and we'd like to know about it.  Drop us a line, tell us exactly what went wrong, and (this is important) <i>give the "Tmpfile" value from the top of the import page</i> so we can replicate it.</p>
+	    <p>If anything else goes wrong during importing, or if a current airline is being mapped wrong, it's a bug and we'd like to know about it.  <a href="/about.html">Drop us a line</a>, tell us exactly what went wrong, and (this is important) <i>give the "Tmpfile" value from the top of the import page</i> so we can replicate it.</p>
 
 	    <h4>You really need to implement cool feature X, and fix terrible bug Y, and do it <i>right now</i>!</h4>
 	    
