@@ -31,7 +31,7 @@
 
 	    <div id="news" style="display: none">
 	      <img src="/img/close.gif" height=17 width=17 onClick='JavaScript:closeNews()'> 
-	      <B>News</b>: 06 Jan 2009: <a href="/about.html#CHANGES">OpenFlights public launch!  Blog, "Elite" donation/level system, new settings and more.</a>
+	      <B>News</b>: 06 Jan 2009: <a href="/about.html#CHANGES">OpenFlights public launch!<br>Blog, "Elite" donation/level system, improved imports, new settings and more.</a>
 	    </div>
 	    
 	    <div id="ajaxloader">
